# rust-audio-player

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: main.rs  utils.rs
src/components/: audio_player.rs  button.rs  echo.rs  mod.rs  overview.rs
src/views/: home.rs  mod.rs  not_found.rs
